# youversion-bible-client

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  DOCS.md  LICENSE  Makefile  README.md  env.example  note_to_markdown.py  note_to_md.py  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  run_tests.py  setup.py  test.py
.github/workflows/: black.yml
docs/:  .readthedocs.yaml  README.md  requirements.txt
docs/source/: clients.rst  conf.py  configuration.rst  dynamic_models.rst  installation.rst  models.rst  quickstart.rst  testing.rst
documentation/source/: api.rst  authentication.rst  best_practices.rst  cli.rst  concurrency.rst  conf.py  deployment.rst  error_handling.rst  examples.rst  index.rst  installation.rst  quickstart.rst
examples/: README.md  basic_usage.py  comprehensive_api_demo.py  concurrent_requests.py  create_moment_example.py  poetry_scripts.py  sync_vs_async.py
tests/: test_async_client.py  test_authenticator.py  test_authenticator_extended.py  test_base_client.py  test_base_client_extended.py  test_bible.py  test_cli.py  test_config.py  test_data_processor.py  test_data_processor_extended.py  test_http_client.py  test_models.py  test_sync_client.py  test_url_discovery.py  test_utils.py
tests/files/: _moments.json  _votd.json
youversion/: __init__.py  _endpoints.py  auth.py  bible.py  cli.py  config.py  enums.py  item.py  utils.py
youversion/clients/: __init__.py  async_client.py  sync_client.py
youversion/core/: __init__.py  authenticator.py  base_client.py  data_processor.py  http_client.py  interfaces.py  url_discovery.py
youversion/models/: __init__.py  base.py  bible.py  common.py  commons.py  events.py  friends.py  moments.py
