[tool.poetry]
name = "youversion-bible-client"
version = "0.3.0"
description = "A Command line interface for interacting with the YouVersion Bible API"
authors = ["Taiwo Kareem <taiwo.kareem36@gmail.com>"]
maintainers = ["Taiwo Kareem <taiwo.kareem36@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tushortz/youversion-bible-client"
repository = "https://github.com/tushortz/youversion-bible-client"
keywords = ["YouVersion Bible", "Bible", "Youversion", "Lifechurch"]
packages = [{ include = "youversion" }]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.25.0"
python-dotenv = "^0.19.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"
sphinx = "^7.4.0"
sphinx-rtd-theme = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youversion = "youversion.cli:main"
votd = "youversion.cli:poetry_cmd_votd"
moments = "youversion.cli:poetry_cmd_moments"
highlights = "youversion.cli:poetry_cmd_highlights"
notes = "youversion.cli:poetry_cmd_notes"
bookmarks = "youversion.cli:poetry_cmd_bookmarks"
images = "youversion.cli:poetry_cmd_images"
plan-progress = "youversion.cli:poetry_cmd_plan_progress"
plan-subscriptions = "youversion.cli:poetry_cmd_plan_subscriptions"
convert-notes = "youversion.cli:poetry_cmd_convert_notes"
discover-endpoints = "youversion.cli:poetry_cmd_discover_endpoints"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["youversion"]
