[project]
name = "youversion-bible-client"
version = "0.1.1"
description = "A Command line interface for interacting with the YouVersion Bible API"
authors = [
    {name = "Taiwo Kareem", email = "taiwo.kareem36@gmail.com"}
]
maintainers = [
    {name = "Taiwo Kareem", email = "taiwo.kareem36@gmail.com"}
]
license = "MIT"
readme = "README.md"
keywords = ["YouVersion Bible", "Bible", "Youversion", "Lifechurch"]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "python-dotenv>=0.19.0",
    "pydantic>=2.5.0",
    "pyjwt>=2.10.1",
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tushortz/youversion-bible-client"
Repository = "https://github.com/tushortz/youversion-bible-client"

[project.scripts]
youversion = "youversion.cli:main"
add-theme = "youversion.cli:poetry_cmd_add_theme"
badges = "youversion.cli:poetry_cmd_badges"
bookmarks = "youversion.cli:poetry_cmd_bookmarks"
convert-notes = "youversion.cli:poetry_cmd_convert_notes"
create-comment = "youversion.cli:poetry_cmd_create_comment"
create-moment = "youversion.cli:poetry_cmd_create_moment"
delete-comment = "youversion.cli:poetry_cmd_delete_comment"
delete-moment = "youversion.cli:poetry_cmd_delete_moment"
delete-saved-event = "youversion.cli:poetry_cmd_delete_saved_event"
get-all-saved-event-ids = "youversion.cli:poetry_cmd_get_all_saved_event_ids"
get-audio-chapter = "youversion.cli:poetry_cmd_get_audio_chapter"
get-audio-version = "youversion.cli:poetry_cmd_get_audio_version"
get-bible-chapter = "youversion.cli:poetry_cmd_get_bible_chapter"
get-bible-configuration = "youversion.cli:poetry_cmd_get_bible_configuration"
get-bible-version = "youversion.cli:poetry_cmd_get_bible_version"
get-bible-versions = "youversion.cli:poetry_cmd_get_bible_versions"
get-event-configuration = "youversion.cli:poetry_cmd_get_event_configuration"
get-event-details = "youversion.cli:poetry_cmd_get_event_details"
get-image-upload-url = "youversion.cli:poetry_cmd_get_image_upload_url"
get-images = "youversion.cli:poetry_cmd_get_images"
get-localization-items = "youversion.cli:poetry_cmd_get_localization_items"
get-moment-colors = "youversion.cli:poetry_cmd_get_moment_colors"
get-moment-details = "youversion.cli:poetry_cmd_get_moment_details"
get-moment-labels = "youversion.cli:poetry_cmd_get_moment_labels"
get-moments = "youversion.cli:poetry_cmd_get_moments"
get-moments-configuration = "youversion.cli:poetry_cmd_get_moments_configuration"
get-recommended-languages = "youversion.cli:poetry_cmd_get_recommended_languages"
get-saved-events = "youversion.cli:poetry_cmd_get_saved_events"
get-theme-description = "youversion.cli:poetry_cmd_get_theme_description"
get-themes = "youversion.cli:poetry_cmd_get_themes"
get-verse-colors = "youversion.cli:poetry_cmd_get_verse_colors"
get-video-details = "youversion.cli:poetry_cmd_get_video_details"
get-videos = "youversion.cli:poetry_cmd_get_videos"
hide-verse-colors = "youversion.cli:poetry_cmd_hide_verse_colors"
highlights = "youversion.cli:poetry_cmd_highlights"
images = "youversion.cli:poetry_cmd_images"
like-moment = "youversion.cli:poetry_cmd_like_moment"
moments = "youversion.cli:poetry_cmd_moments"
notes = "youversion.cli:poetry_cmd_notes"
plan-completions = "youversion.cli:poetry_cmd_plan_completions"
plan-progress = "youversion.cli:poetry_cmd_plan_progress"
plan-subscriptions = "youversion.cli:poetry_cmd_plan_subscriptions"
register-device = "youversion.cli:poetry_cmd_register_device"
remove-theme = "youversion.cli:poetry_cmd_remove_theme"
save-event = "youversion.cli:poetry_cmd_save_event"
search-bible = "youversion.cli:poetry_cmd_search_bible"
search-events = "youversion.cli:poetry_cmd_search_events"
search-plans = "youversion.cli:poetry_cmd_search_plans"
search-users = "youversion.cli:poetry_cmd_search_users"
send-friend-request = "youversion.cli:poetry_cmd_send_friend_request"
set-theme = "youversion.cli:poetry_cmd_set_theme"
unlike-moment = "youversion.cli:poetry_cmd_unlike_moment"
unregister-device = "youversion.cli:poetry_cmd_unregister_device"
update-moment = "youversion.cli:poetry_cmd_update_moment"
votd = "youversion.cli:poetry_cmd_votd"

[tool.poetry]
packages = [{ include = "youversion" }]
exclude = [
    "docs/**/*",
    "docs",
    "examples/**/*",
    "examples",
    "tests/**/*",
    "tests",
    "htmlcov/**/*",
    "htmlcov",
    "env/**/*",
    "env",
    "*.pyc",
    "__pycache__/**/*",
    "*.egg-info",
    ".pytest_cache/**/*",
    ".mypy_cache/**/*",
    "bandit-report.json",
    "main.py",
    "note_to_markdown.py",
    "run_tests.py",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.1"
sphinx = "^7.4.0"
sphinx-rtd-theme = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["youversion"]

[tool.coverage.run]
source = ["youversion"]
omit = [
    "youversion/cli.py",
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
